--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <module>pos-products</module>
         <module>pos-carts</module>
         <module>pos-discovery</module>
-        <module>pos-gateway</module>
+        <module>pos-api</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -84,9 +84,6 @@
                                 <goal>generate</goal>
                             </goals>
                             <configuration>
-                                <inputSpec>
-                                    ${project.basedir}/src/main/resources/api.yml
-                                </inputSpec>
                                 <generatorName>spring</generatorName>
                                 <library>spring-boot</library>
                                 <configOptions>
